# rt2851mr

./: README.md
kernel/: Makefile  bin  embedded_dtb
kernel/block/: blk-core.c  genhd.c  (+1 more)
kernel/drivers/rtk_kdriver/common/: Android.mk  CMakeLists.txt  NOTICE
kernel/drivers/rtk_kdriver/common/IPC/generate/include/audio/: AudioRPCBaseDS.h  AudioRPC_System.h
kernel/drivers/rtk_kdriver/common/IPC/generate/include/secure/: AudioRPCBaseDS_data.h  AudioRPC_System.h  VideoRPCBaseDS.h  VideoRPCBaseDS_data.h  VideoRPC_System.h  VideoRPC_System_data.h
kernel/drivers/rtk_kdriver/common/IPC/generate/include/system/: AudioRPCBaseDS.h  VideoRPC_Agent_data.h
kernel/drivers/rtk_kdriver/common/IPC/generate/include/video/: VideoRPCBaseDS.h  VideoRPC_System.h
kernel/drivers/rtk_kdriver/common/IPC/generate/src/audio/: AudioRPC_System_svc.c  Makefile
kernel/drivers/rtk_kdriver/common/IPC/generate/src/secure/: Makefile  Makefile-video  VideoRPC_Agent_xdr.c
kernel/drivers/rtk_kdriver/common/IPC/generate/src/system/: AudioRPCBaseDS_xdr.c  AudioRPC_System_clnt.c  Makefile  Makefile-video  VideoRPC_System_clnt.c
kernel/drivers/rtk_kdriver/common/IPC/generate/src/video/: VideoRPCBaseDS_xdr.c  VideoRPC_System_clnt.c  VideoRPC_System_svc.c  VideoRPC_System_xdr.c
kernel/drivers/rtk_kdriver/common/IPC/include/: AudioInbandAPI.h  InbandAPI.h  RPCstruct.h  defines_for_bionic.h  hresult.h  rpc_common.h  rpcstubapi.h  rtk_types.h  video_flash.h
kernel/drivers/rtk_kdriver/common/IPC/include/xdr/: OSALTypes.h  types.h  xdr.h
kernel/drivers/rtk_kdriver/common/IPC/script/audio/: AudioRPCBaseDS.x  AudioRPC_System.x
kernel/drivers/rtk_kdriver/common/IPC/script/video/: VideoRPCBaseDS.x  VideoRPC_Agent.x  VideoRPC_System.x
kernel/drivers/rtk_kdriver/common/IPC/src/: Makefile  RPCProxy.c  rpcapi.c  rpcstubapi.c
kernel/drivers/rtk_kdriver/common/IPC/src/xdr/: Makefile
kernel/drivers/rtk_kdriver/common/include/ioctrl/ai/: ai_cmd_id.h
kernel/drivers/rtk_kdriver/common/include/ioctrl/audio/: audio_cmd_id.h
kernel/drivers/rtk_kdriver/common/include/ioctrl/scaler/: hdcp2_cmd_id.h  vbe_cmd_id.h  vfe_cmd_id.h  vr_cmd_id.h  vsc_cmd_id.h  vt_cmd_id.h
kernel/drivers/rtk_kdriver/common/include/ioctrl/vpq/: vpq_cmd_id.h  vpq_extern_cmd_id.h  vpq_externsky_cmd_id.h  vpq_led_cmd_id.h  vpq_memc_cmd_id.h
kernel/drivers/rtk_kdriver/common/include/scaler/: scalerCommon.h  scalerDrvCommon.h  vdcCommon.h  vipCommon.h  vipRPCCommon.h
(+2833 files in other folders)
